--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.2.0",
+    "@vercel/speed-insights": "^1.2.0",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
