--- a/package.json
+++ b/package.json
@@ -42,16 +42,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "15.1.7.",
     "eslint-plugin-react": "^7.37.2",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "next-svgr": "^0.0.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
