--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "analyze": "ANALYZE=true next build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.38.0",
@@ -26,7 +27,6 @@
     "next": "^15.2.0",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.5.0",
-    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -53,6 +53,7 @@
     "eslint-plugin-react": "^7.37.2",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "next-sitemap": "^4.2.3",
     "next-svgr": "^0.0.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
